data 전처리 (Time으로부터 생성하는 변수 생성)

--- a/Data-EDA.ipynb
+++ b/Data-EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,10 @@
     "from datetime import datetime\n",
     "import numpy as np\n",
     "\n",
-    "# path = r'data/경진대회_나주시_전력사용량 DATA1' # use your path\n",
-    "# all_files = glob.glob(path + \"/*.csv\")\n",
+    "# 한국의 공휴일, version : 1.1.1\n",
+    "from workalendar.asia import SouthKorea \n",
     "\n",
-    "# li = []\n",
-    "\n",
-    "# for filename in all_files:\n",
-    "#     df = pd.read_csv(filename, index_col=None, header=0, encoding='euc-kr')\n",
-    "#     li.append(df)\n",
-    "\n",
-    "# frame = pd.concat(li, axis=0, ignore_index=True)"
+    "holidays = pd.concat([pd.Series(np.array(SouthKorea().holidays(2018))[:, 0]), pd.Series(np.array(SouthKorea().holidays(2017))[:, 0])]).reset_index(drop=True)"
    ]
   },
   {
@@ -2534,34 +2528,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_to_csv(df, user_list, start_time=\"2017-1-1\", end_time=\"2019-1-1\"):\n",
     "    '''\n",
+    "    description : Dataframe을 csv로 출력해주는 함수 (user)\n",
+    "    # input parameter \n",
     "    df : DataFrame\n",
-    "    user_list : user list\n",
-    "    start_time : \"2017-1-1\"\n",
-    "    end_time : \"2019-1-1\"\n",
+    "    user_list : user 리스트 (1개 이상)\n",
+    "    start_time : 시작 날짜(일 단위), e.g. \"2017-1-1\" \n",
+    "    end_time : 종료 날짜(일 단위), e.g. \"2019-1-1\"\n",
+    "    # Output parameter \n",
+    "    따로 없으며, csv 파일을 \"preprocessed data/\"에 출력함 \n",
+    "    \n",
+    "    output column list\n",
+    "    1. 'datetime'     : 15분 단위 시간\n",
+    "    2. 'active_power' : 유효전력 \n",
+    "    3. 'month'        : 월 (1 ~ 12)\n",
+    "    4. 'week'         : 주 (1 ~ 52)\n",
+    "    5. 'weekday'      : 월:0 ~ 일:6\n",
+    "    6. 'day'          : 일\n",
+    "    7. 'hour'         : 시간 (0 ~ 23)\n",
+    "    8. 'is_holiday'   : 휴일:1, 비휴일:0\n",
+    "    ... (온도, 습도 추가 예정)\n",
+    "    \n",
     "    '''\n",
     "    contract_type = df['contract_type'].unique()[0]\n",
     "    \n",
-    "    standard_time = pd.date_range(start_time, end_time, freq=\"15T\")\n",
-    "    df_standard_time = pd.DataFrame(standard_time, columns=['datetime'])\n",
+    "    standard_time = pd.date_range(start_time, end_time, freq=\"15T\")  # 15분 단위로 시간 데이터 생성\n",
+    "    df_standard_time = pd.DataFrame(standard_time, columns=['datetime'])  #\n",
     "    \n",
     "    for user in user_list:\n",
     "        # 불필요한 컬럼 제거하기!\n",
     "        \n",
-    "        # 1. user별로 df 분할하기\n",
+    "        # 1. user별로 df 분할 및 '시간' 및 '유효전력' 컬럼 출력\n",
     "        temp_df = df[df['user'] == user]\n",
+    "        \n",
     "        # 2. df merge\n",
     "        df_time_power = pd.merge(df_standard_time, temp_df, how = 'left')\n",
-    "        # 3. 보간법 또는 평균 (반올림 하기!)\n",
-    "        df_time_power = df_time_power.interpolate()\n",
+    "        \n",
+    "        # 3. Time으로부터 생성하는 변수 : month, week, weekday, day, hour\n",
+    "        # weekend와 holiday를 이용하여, 휴일을 정의\n",
+    "        # The month as January=1, December=12.\n",
+    "        df_time_power['month'] = df_time_power['datetime'].dt.month\n",
+    "        # The week ordinal of the year.\n",
+    "        df_time_power['week'] = df_time_power['datetime'].dt.week\n",
+    "        # The day of the week with Monday=0, Sunday=6.\n",
+    "        df_time_power['weekday'] = df_time_power['datetime'].dt.weekday\n",
+    "        # The weekend of the day with monday ~ friday = 0, saturday, sunday = 1\n",
+    "        df_time_power['weekend'] = df_time_power['weekday'].map({0:0, 1:0, 2:0, 3:0, 4:0, 5:1, 6:1})\n",
+    "\n",
+    "        # The day of the 1~31\n",
+    "        df_time_power['day'] = df_time_power['datetime'].dt.day\n",
+    "        # The hour of the 0 ~ 23\n",
+    "        df_time_power['hour'] = df_time_power['datetime'].dt.hour\n",
+    "\n",
+    "        # 공휴일(1) 및 평일(0) 구분\"\n",
+    "        df_time_power['holiday'] = df_time_power['datetime'].dt.date.isin(holidays).astype(int)\n",
+    "        df_time_power['is_holiday'] = (df_time_power['weekend'] + df_time_power['holiday']).map({0:0, 1:1, 2:1})\n",
+    "        \n",
+    "        \n",
+    "        # 4. 보간법 이후 평균 (반올림 하기!)\n",
+    "        df_time_power = df_time_power.interpolate().round(2)[['datetime', 'active_power', 'month', 'week', 'weekday', 'day', 'hour', 'is_holiday']]\n",
+    "        \n",
+    "        # \n",
+    "        fill_mean_func = lambda g: g.fillna(g.mean())\n",
+    "        df_time_power = df_time_power.groupby(['weekday', 'hour', 'is_holiday']).apply(fill_mean_func).round(2)\n",
+    "        \n",
     "        \n",
     "        # 4. csv 파일로 추출하기\n",
-    "        df_time_power[df_time_power['user'] == user].to_csv('preprocessed data/' + contract_type + '_' + user +'.csv', index=False)\n",
+    "        df_time_power.to_csv('preprocessed data/' + contract_type + '_' + user +'.csv', index=False)\n",
     "        print(\"'{0}.csv' file has been created.\".format(user))\n",
     "    print(\"finished !\")\n",
     "    return None"
@@ -2569,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2578,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 323,
    "metadata": {
     "scrolled": true
    },
