전처리 코드 수정 및 전처리된 csv 읽어오는 ipython 생성

--- a/Data-EDA.ipynb
+++ b/Data-EDA.ipynb
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2595,7 +2595,7 @@
     "        \n",
     "        # \n",
     "        fill_mean_func = lambda g: g.fillna(g.mean())\n",
-    "        df_time_power = df_time_power.groupby(['weekday', 'hour', 'is_holiday']).apply(fill_mean_func).round(2)\n",
+    "        df_time_power = df_time_power.groupby(['weekday', 'hour', 'is_holiday']).apply(fill_mean_func).round(2).sort_values('datetime')\n",
     "        \n",
     "        \n",
     "        # 4. csv 파일로 추출하기\n",
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,10 +2616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 334,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2640,7 +2638,7 @@
     }
    ],
    "source": [
-    "df_to_csv(df_group_B, df_group_B_user_lists,'2017-8-1', '2018-3-1')"
+    "df_to_csv(df_group_B, df_group_B_user_lists, '2017-8-1', '2018-3-1')"
    ]
   },
   {
