--- a/incheon_data_EDA.ipynb
+++ b/incheon_data_EDA.ipynb
@@ -1405,6 +1405,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'남동구_AA32동_5_0.csv' file has been created.\n",
+      "'부평구_AA8동_46_0.csv' file has been created.\n",
+      "'강화군_AA9동_5_0.csv' file has been created.\n",
+      "'남동구_AA31동_7_0.csv' file has been created.\n",
+      "'남동구_AA30동_5_0.csv' file has been created.\n",
+      "'중구_AA13동_9_0.csv' file has been created.\n",
+      "'남동구_AA6동_20_0.csv' file has been created.\n",
+      "'남동구_AA34동_6_0.csv' file has been created.\n",
+      "'중구_AA10동_88_0.csv' file has been created.\n",
+      "'남동구_AA4동_10_0.csv' file has been created.\n",
+      "finished !\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step 2 : 상위 10개를 csv 파일로 출력하기\n",
+    "df_group_A_lists_end = get_multiple_elements_in_list(df_group_A_lists, np.arange(10))\n",
+    "df_to_csv(df_group_A, weather_data, df_group_A_lists_end, '2017-8-1', '2018-3-1')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1480,6 +1509,35 @@
     "# 일반용(갑)저압 시각화\n",
     "# step 1 : (상위 `10`개)\n",
     "df_group_B_lists = df_multiple_visualize(df_group_B, 10, 15, 15, start_time = '2017-8-1', end_time = '2018-2-28')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'남동구_AA34동_5_1.csv' file has been created.\n",
+      "'부평구_AA8동_5_1.csv' file has been created.\n",
+      "'남동구_AA6동_6_1.csv' file has been created.\n",
+      "'동구_AA20동_9_1.csv' file has been created.\n",
+      "'중구_AA24동_6_1.csv' file has been created.\n",
+      "'남동구_AA29동_8_1.csv' file has been created.\n",
+      "'미추홀구_AA12동_107_1.csv' file has been created.\n",
+      "'동구_AA28동_9_1.csv' file has been created.\n",
+      "'남동구_AA4동_9_1.csv' file has been created.\n",
+      "'중구_AA53동_5_1.csv' file has been created.\n",
+      "finished !\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step 2 : 상위 10개를 csv 파일로 출력하기\n",
+    "df_group_B_lists_end = get_multiple_elements_in_list(df_group_B_lists, np.arange(10))\n",
+    "df_to_csv(df_group_B, weather_data, df_group_B_lists_end, '2017-8-1', '2018-3-1')"
    ]
   }
  ],
